# Cordelia-DB

./: CMakeLists.txt  main.cpp
files/database/: dbtest.csv
framework/: DBHandler.h  ExceptionHandler.h  FileHandler.h  StringHandler.h
framework/DB/: DBFileManager.h  DBTable.h  ResultSet.h  TableBase.h
